--- a/SookDevLog/src/styles/global.css
+++ b/SookDevLog/src/styles/global.css
@@ -4,7 +4,7 @@
 
 @layer components {
 	.default-layout {
-		@apply m-auto px-8 lg:max-w-[1240px];
+		@apply m-auto px-5 lg:px-8 lg:max-w-[1240px];
 	}
 	.btn-primary {
 		@apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
