--- a/SookDevLog/src/templates/PostDetailCms.css
+++ b/SookDevLog/src/templates/PostDetailCms.css
@@ -1,8 +1,31 @@
+.title_layout {
+	width: 100%;
+	height: 300px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+}
+.title_style {
+	font-weight: 500;
+	font-size: 36px;
+	z-index: 10;
+}
+.image_style {
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	object-fit: cover;
+	width: 100%;
+	height: 300px;
+	opacity: 0.2;
+}
 .content_layout {
 	display: flex;
 	flex-direction: column;
-	min-width: 768px;
-	margin: 0 auto;
+	max-width: 768px;
+	margin: 50px auto;
 	word-break: break-all;
 
 	line-height: 1.8;
