--- a/src/templates/PostDetailCms.css
+++ b/src/templates/PostDetailCms.css
@@ -16,7 +16,7 @@
 	overflow: hidden;
 	position: absolute;
 	top: 0;
-	object-fit: cover;
+	object-fit: contain;
 	width: 100%;
 	height: 300px;
 	opacity: 0.2;
